Message List: Fix scroll jumps

--- a/src/components/middle/MessageList.scss
+++ b/src/components/middle/MessageList.scss
@@ -5,7 +5,6 @@
   width: 100%;
   margin-bottom: .5rem;
 
-  overflow-anchor: none;
   overflow: scroll;
   overflow-x: hidden;
   overflow-y: auto;
